--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
 
-  <title>Document</title>
+  <title>Enrick Santos - Dev Front End</title>
 </head>
 <body>
-  
+  <header>
+    <section>
+      <p>OI 👋EU SOU ENRICK</p>
+      <div class="titleContainer">
+        <div>
+          <h1>Frontend</h1>
+          <div>
+            <a href=""><img src="./assets/icons/linkedIn.svg" alt=""></a>
+            <a href=""><img src="./assets/icons/github.svg" alt=""></a>
+            <a href=""><img src="./assets/icons/curriculo.svg" alt=""></a>
+          </div>
+        </div>
+        <h1>Developer</h1>
+      </div>
+      <div>
+        <p>Possuo experiência no desenvolvimento web em html, css, javascript, php, um pouco de jQuery e mysql. Atualmente estudando React js e UIDesign.</p>
+      </div>
+    </section>
+  </header>
 </body>
 </html>
