update css: migrate css to scss

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./sass/reset.css">
+  <link rel="stylesheet" href="./sass/style.min.css">
 
   <title>Enrick Santos - Dev Front End</title>
 </head>
@@ -25,8 +25,8 @@
         </div>
         <h1>Developer</h1>
       </div>
-      <div>
-        <p>Possuo experiência no desenvolvimento web em html, css, javascript, php, um pouco de jQuery e mysql. Atualmente estudando React js e UIDesign.</p>
+      <div class="descContainer">
+        <p>Possuo experiência no desenvolvimento web em html, css, javascript, <br> php, um pouco de jQuery e mysql. Atualmente estudando React js e UIDesign.</p> 
       </div>
     </section>
   </header>
