--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div>
           <h1>Frontend</h1>
           <div>
-            <a href=""><img src="./assets/icons/linkedIn.svg" alt=""></a>
-            <a href=""><img src="./assets/icons/github.svg" alt=""></a>
-            <a href=""><img src="./assets/icons/curriculo.svg" alt=""></a>
+            <a href="https://www.linkedin.com/in/enrick-santos/"><img src="./assets/icons/linkedIn.svg" alt="Icone do linkedin"></a>
+            <a href="https://github.com/rick-png"><img src="./assets/icons/github.svg" alt="Icone do Github"></a>
+            <a href="./assets/curriculo/curriculo.pdf" target="_blank"><img src="./assets/icons/curriculo.svg" alt="Icone de donwload do curriculo de Enrick"></a>
           </div>
         </div>
         <h1>Developer</h1>
