html section for projects

--- a/index.html
+++ b/index.html
@@ -30,5 +30,35 @@
       </div>
     </section>
   </header>
+
+  <main>
+    <section>
+      <div class="contentProjects">
+
+        <div>
+          <div class="screens">
+            <figure></figure>
+            <figure></figure>
+          </div>
+          <div class="texts">
+            <p>
+            <h3></h3>
+          </div>
+        </div>
+
+        <div>
+          <div class="screens">
+            <figure></figure>
+            <figure></figure>
+          </div>
+          <div class="texts">
+            <p>
+            <h3></h3>
+          </div>
+        </div>
+        
+      </div>
+    </section>
+  </main>
 </body>
 </html>
