inicialize add projects

--- a/index.html
+++ b/index.html
@@ -32,28 +32,59 @@
   </header>
 
   <main>
+    <div class="gradientBackground"></div>
     <section>
       <div class="contentProjects">
 
         <div>
           <div class="screens">
-            <figure></figure>
-            <figure></figure>
+            <figure>
+              <a href=""><img src="./assets/imgs_screens/screens_travellian.png" alt="Imagem demonstrando tela do projeto de uma pagina de Viagens"></a>
+              <figcaption>Estudo em Javascript craindo sliders</figcaption>
+            </figure>
           </div>
           <div class="texts">
+            <h3>Pagina de viagens desenvolvida com html, css e javascript </h3>
             <p>
-            <h3></h3>
           </div>
         </div>
 
         <div>
           <div class="screens">
-            <figure></figure>
-            <figure></figure>
+            <figure>
+              <a href=""><img src="./assets/imgs_screens/screens_solarSystem.png" alt="Imagem demonstrando tela do projeto de uma pagina de um sistema solar"></a>
+              <figcaption>Estudo em Javascript, manipulação do DOM</figcaption>
+            </figure>
           </div>
           <div class="texts">
+            <h3>Site de informações sobre os planetas (em desenvolvimento)</h3>
             <p>
-            <h3></h3>
+          </div>
+        </div>
+
+        <div>
+          <div class="screens">
+            <figure>
+              <a href=""><img src="./assets/imgs_screens/screens_simpleTimer.png" alt="Imagem demonstrando tela do projeto de uma pagina de um temporizador"></a>
+              <figcaption>Estudo em Javascript</figcaption>
+            </figure>
+          </div>
+          <div class="texts">
+            <h3>Temporizador</h3>
+            <p>
+          </div>
+        </div>
+
+        <div>
+          <div class="screens">
+            <figure>
+              <a href=""><img src="./assets/imgs_screens/screens_processoTc.png" alt="Imagem demonstrando tela do projeto de uma pagina de um Stories"></a>
+              <figcaption>Estudo em Javascript</figcaption>
+            </figure>
+          </div>
+          <div class="texts">
+            <h3>Demonstração de stories com javascript</h3>
+            <p>
           </div>
         </div>
         
