add links and estilizes texts

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div>
           <div class="screens">
             <figure>
-              <a href=""><img src="./assets/imgs_screens/screens_travellian.png" alt="Imagem demonstrando tela do projeto de uma pagina de Viagens"></a>
+              <a href="https://rick-png.github.io/travellian_LandingPage/" target="_blank"><img src="./assets/imgs_screens/screens_travellian.png" alt="Imagem demonstrando tela do projeto de uma pagina de Viagens"></a>
               <figcaption>Estudo em Javascript craindo sliders</figcaption>
             </figure>
           </div>
@@ -52,7 +52,7 @@
         <div>
           <div class="screens">
             <figure>
-              <a href=""><img src="./assets/imgs_screens/screens_solarSystem.png" alt="Imagem demonstrando tela do projeto de uma pagina de um sistema solar"></a>
+              <a href="https://rick-png.github.io/solarSystem/" target="_blank"><img src="./assets/imgs_screens/screens_solarSystem.png" alt="Imagem demonstrando tela do projeto de uma pagina de um sistema solar"></a>
               <figcaption>Estudo em Javascript, manipulação do DOM</figcaption>
             </figure>
           </div>
@@ -65,7 +65,7 @@
         <div>
           <div class="screens">
             <figure>
-              <a href=""><img src="./assets/imgs_screens/screens_simpleTimer.png" alt="Imagem demonstrando tela do projeto de uma pagina de um temporizador"></a>
+              <a href="https://rick-png.github.io/simple-timer/" target="_blank"><img src="./assets/imgs_screens/screens_simpleTimer.png" alt="Imagem demonstrando tela do projeto de uma pagina de um temporizador"></a>
               <figcaption>Estudo em Javascript</figcaption>
             </figure>
           </div>
@@ -78,7 +78,7 @@
         <div>
           <div class="screens">
             <figure>
-              <a href=""><img src="./assets/imgs_screens/screens_processoTc.png" alt="Imagem demonstrando tela do projeto de uma pagina de um Stories"></a>
+              <a href="https://rick-png.github.io/processoTc/" target="_blank"><img src="./assets/imgs_screens/screens_processoTc.png" alt="Imagem demonstrando tela do projeto de uma pagina de um Stories"></a>
               <figcaption>Estudo em Javascript</figcaption>
             </figure>
           </div>
