add media querys

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
           </div>
           <div class="texts">
             <h3>Pagina de viagens desenvolvida com html, css e javascript </h3>
-            <p>
+          </div>
+          <div class="buttons">
+            <a href=""><button>Github</button></a>
+            <a href=""><button>Website</button></a>
           </div>
         </div>
 
@@ -58,7 +61,10 @@
           </div>
           <div class="texts">
             <h3>Site de informações sobre os planetas (em desenvolvimento)</h3>
-            <p>
+          </div>
+          <div class="buttons">
+            <a href=""><button>Github</button></a>
+            <a href=""><button>Website</button></a>
           </div>
         </div>
 
@@ -71,7 +77,10 @@
           </div>
           <div class="texts">
             <h3>Temporizador</h3>
-            <p>
+          </div>
+          <div class="buttons">
+            <a href=""><button>Github</button></a>
+            <a href=""><button>Website</button></a>
           </div>
         </div>
 
@@ -84,7 +93,10 @@
           </div>
           <div class="texts">
             <h3>Demonstração de stories com javascript</h3>
-            <p>
+          </div>
+          <div class="buttons">
+            <a href=""><button>Github</button></a>
+            <a href=""><button>Website</button></a>
           </div>
         </div>
         
