--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <h3>Pagina de viagens desenvolvida com html, css e javascript </h3>
           </div>
           <div class="buttons">
-            <a href=""><button>Github</button></a>
-            <a href=""><button>Website</button></a>
+            <a target="_blank" href="https://github.com/rick-png/travellian_LandingPage"><button>Github</button></a>
+            <a target="_blank" href="https://rick-png.github.io/travellian_LandingPage/"><button>Website</button></a>
           </div>
         </div>
 
@@ -63,8 +63,8 @@
             <h3>Site de informações sobre os planetas (em desenvolvimento)</h3>
           </div>
           <div class="buttons">
-            <a href=""><button>Github</button></a>
-            <a href=""><button>Website</button></a>
+            <a target="_blank" href="https://github.com/rick-png/solarSystem"><button>Github</button></a>
+            <a target="_blank" href="https://rick-png.github.io/solarSystem/"><button>Website</button></a>
           </div>
         </div>
 
@@ -79,8 +79,8 @@
             <h3>Temporizador</h3>
           </div>
           <div class="buttons">
-            <a href=""><button>Github</button></a>
-            <a href=""><button>Website</button></a>
+            <a target="_blank" href="https://github.com/rick-png/simple-timer"><button>Github</button></a>
+            <a target="_blank" href="https://rick-png.github.io/simple-timer/"><button>Website</button></a>
           </div>
         </div>
 
@@ -95,8 +95,8 @@
             <h3>Demonstração de stories com javascript</h3>
           </div>
           <div class="buttons">
-            <a href=""><button>Github</button></a>
-            <a href=""><button>Website</button></a>
+            <a target="_blank" href="https://github.com/rick-png/processoTc"><button>Github</button></a>
+            <a target="_blank" href="https://rick-png.github.io/processoTc/"><button>Website</button></a>
           </div>
         </div>
         
