--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         <p>Possuo experiência no desenvolvimento web em html, css, javascript, <br> php, um pouco de jQuery e mysql. Atualmente estudando React js e UIDesign.</p> 
       </div>
     </section>
+
+    <section class="textMobile">
+      <p>Possuo experiência no desenvolvimento web em html, css, javascript, php, um pouco de jQuery e mysql. Atualmente estudando React js e UIDesign.</p> 
+    </section>
   </header>
 
   <main>
