--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="screens">
             <figure>
               <a href="https://rick-png.github.io/travellian_LandingPage/" target="_blank"><img src="./assets/imgs_screens/screens_travellian.png" alt="Imagem demonstrando tela do projeto de uma pagina de Viagens"></a>
-              <figcaption>Estudo em Javascript craindo sliders</figcaption>
+              <figcaption>Estudo em Javascript criando sliders</figcaption>
             </figure>
           </div>
           <div class="texts">
