--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
       <div class="descContainer">
         <p>Possuo experiência no desenvolvimento web em html, css, javascript, <br> php, um pouco de jQuery e mysql. Atualmente estudando React js e UIDesign.</p> 
       </div>
-    </section>
-
-    <section class="textMobile">
-      <p>Possuo experiência no desenvolvimento web em html, css, javascript, php, um pouco de jQuery e mysql. Atualmente estudando React js e UIDesign.</p> 
+      
+      <div class="iconMobile">
+        <a href="https://www.linkedin.com/in/enrick-santos/"><img src="./assets/icons/linkedIn.svg" alt="Icone do linkedin"></a>
+        <a href="https://github.com/rick-png"><img src="./assets/icons/github.svg" alt="Icone do Github"></a>
+        <a href="./assets/curriculo/curriculo.pdf" target="_blank"><img src="./assets/icons/curriculo.svg" alt="Icone de donwload do curriculo de Enrick"></a>
+      </div>
     </section>
   </header>
 
