update mobile screen

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         <p>Possuo experiência no desenvolvimento web em html, css, javascript, <br> php, um pouco de jQuery e mysql. Atualmente estudando React js e UIDesign.</p> 
       </div>
       
+      <div class="descContainerMobile">
+        <p>Sou um garoto muito curioso que ama design, interfaces e programação.
+          Tenho um grande amor por desenvolvimento Front-end e possuo experiência
+          no desenvolvimento web em Javascript(ES6),HTML, CSS, PHP, JQuery e Mysql.
+          Atualmente estudando UIDesign e React js.</p> 
+      </div>
+      
       <div class="iconMobile">
         <a href="https://www.linkedin.com/in/enrick-santos/"><img src="./assets/icons/linkedIn.svg" alt="Icone do linkedin"></a>
         <a href="https://github.com/rick-png"><img src="./assets/icons/github.svg" alt="Icone do Github"></a>
@@ -36,6 +43,7 @@
       </div>
     </section>
   </header>
+  <script src="./js/mobileScreen.js"></script>
 
   <main>
     <div class="gradientBackground"></div>
