--- a/index.html
+++ b/index.html
@@ -113,6 +113,22 @@
             <a target="_blank" href="https://rick-png.github.io/processoTc/"><button>Website</button></a>
           </div>
         </div>
+
+        <div>
+          <div class="screens">
+            <figure>
+              <a href="https://rick-png.github.io/landing_page-appoly/" target="_blank"><img src="./assets/imgs_screens/screens_appoly.png" alt="Imagem demonstrando tela do projeto de uma pagina de um Stories"></a>
+              <figcaption></figcaption>
+            </figure>
+          </div>
+          <div class="texts">
+            <h3>Landing page</h3>
+          </div>
+          <div class="buttons">
+            <a target="_blank" href="https://github.com/rick-png/landing_page-appoly"><button>Github</button></a>
+            <a target="_blank" href="https://rick-png.github.io/landing_page-appoly/"><button>Website</button></a>
+          </div>
+        </div>
         
       </div>
     </section>
