add project appoly

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div>
           <div class="screens">
             <figure>
-              <a href="https://rick-png.github.io/landing_page-appoly/" target="_blank"><img src="./assets/imgs_screens/screens_appoly.png" alt="Imagem demonstrando tela do projeto de uma pagina de um Stories"></a>
+              <a href="https://rick-png.github.io/landing_page-appoly/" target="_blank"><img src="./assets/imgs_screens/screens_appoly.png" alt="Imagem demonstrando tela do projeto de landing page"></a>
               <figcaption></figcaption>
             </figure>
           </div>
